apps/homepage/overlays/nishir/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
spec:
  rules:
    - host: homepage.taila659a.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - homepage
